objects/route/route.yaml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: ara
  name: ara
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ara
